--- a/css/sp.css
+++ b/css/sp.css
@@ -15,6 +15,6 @@
 		text-align: center;
 	}
 	.nav01 {
-		background-image: url(/img/menu/ico_hospital.png);
+		background-image: url(../img/menu/ico_home.png);
     background-position: center 10px;
 	}
